# ai-autonomous-employee-hackathon0

./: .env.cloud.template  .gitattributes  .gitignore  Bank_Transactions.md  Business_Goals.md  CLAUDE.md  Company_Handbook.md  Dashboard.md  README.md  dashboard.html  pm2.config.js  pyproject.toml
.claude/: mcp.json  settings.json
Accounting/: Current_Month.md  Rates.md
Approved/: 2026-02-24_approve-linkedin-post-publish.md  2026-02-24_approve-odoo-customer-sync.md  2026-02-24_human-audit-review.md  2026-02-24_social-post_ai-employee-is-live-automatin.md
Briefings/: 2026-01-27_ceo_briefing.md  2026-02-23_ceo_briefing.md  2026-02-24_ceo_briefing.md  2026-02-26_monday_briefing.md
Done/: 2026-01-27_create_rollback_and_eventbus_skills.md  2026-01-27_setup_mcp_server.md  2026-02-23_generate-todays-ceo-briefing.md  2026-02-24_audit-subscription-expenses.md  2026-02-24_draft-linkedin-post-about-ai-employee-la.md  2026-02-24_generate-weekly-social-media-report.md  2026-02-24_invoice-acme-ltd.md  2026-02-24_reconcile-february-invoices-in-odoo.md  2026-02-24_review-and-categorise-all-gmail-unread-m.md  2026-02-24_review-whatsapp-business-messages.md  2026-02-24_test-claim-task.md  2026-02-24_update-odoo-customer-records.md  2026-02-24_weekly-audit.md  2026-02-26_email-invoice-client-a.md  2026-02-26_email-invoice-client-b.md  2026-02-26_email-invoice-client-c.md  2026-02-26_invoice-client-a_plan.md  2026-02-26_invoice-client-b_plan.md  2026-02-26_invoice-client-c_plan.md  2026-02-26_whatsapp_client-a.md  2026-02-26_whatsapp_client-b.md  2026-02-26_whatsapp_client-c.md
(+289 files in other folders)
